app_controllers/infrastructure/kubernetes-deployments/services/splunk-universal-forwarder/01_deployment-docker-desktop-splunk-universal-forwarder-charles.yml

kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: splunk-universal-forwarder-charles
  labels:
    app: splunk-universal-forwarder-charles
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splunk-universal-forwarder-charles
  template:
    metadata:
      labels:
        app: splunk-universal-forwarder-charles
    spec:
      volumes:
        - name: docker-desktop-charles-pv
          persistentVolumeClaim:
            claimName: docker-desktop-charles-pvc
      containers:
      - name: splunk-universal-forwarder-charles
        image: splunk/universalforwarder:latest
        ports:
        - containerPort: 9997
        volumeMounts:
        - mountPath: "/var/log/challenge0000"
          name: docker-desktop-charles-pv
