app_controllers/infrastructure/kubernetes-deployments/services/splunk-universal-forwarder/02_service-docker-desktop-splunk-universal-forwarder-charles.yml

apiVersion: v1
kind: Service
metadata:
  name: splunk-universal-forwarder-charles
  annotations:
    external-dns.alpha.kubernetes.io/hostname: splunk-universal-forwarder-charles.docker-desktop.securethebox.us
spec:
  selector:
    app: splunk-universal-forwarder-charles
  ports:
  - name: http
    targetPort: 9997
    port: 9997
