app_controllers/infrastructure/kubernetes-deployments/services/splunk-universal-forwarder/03_ingress-docker-desktop-splunk-universal-forwarder-charles.yml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: splunk-universal-forwarder-charles
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/preserve-host: "true"
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
spec:
  rules:
  - host: splunk-universal-forwarder-charles.docker-desktop.securethebox.us
    http:
      paths:
      - path: /
        backend:
          serviceName: splunk-universal-forwarder-charles
          servicePort: 9997
